codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__vim_replace_slash_recovery.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5348
expression: terminal.backend()
---
"› /diff  show git diff (including untracked files)                                                  "
"│                                                                                                   "
"› /dide tail                                                                                        "
"│                                                                                                   "
"│                                                                                                   "
"│                                                                                                   "
"│                                                                                                   "
"│                                                                                                   "
"                                             100% context left | Vim: Replace · Tab Context Ledger  "
